--- a/src/app/components/base/base.component.html
+++ b/src/app/components/base/base.component.html
@@ -1,12 +1,17 @@
-<div class="base-container">
-  <div class="base-title">
-    <h1>Hello, Please Login Or Sign Up</h1>
+<div class="base">
+  <div class="base__container">
+    <div class="base__title">
+      <h1 class="base__title--h1">Your Innovation Starts Here.</h1>
+      <h2 class="base__title--h2">Lets get Started</h2>
+    </div>
+    <div class="base__image">
+      <img class="base__image-main" src="../../../assets/images/base_bg.jpg" alt="">
+    </div>
+    <div class=" base__buttons button-wrapper">
+      <a routerLink="/login" class="base__buttons--link">
+        <button type="submit" class="button button--link">Log In</button> </a>
+      <a routerLink="/signup" class="base__buttons--link">
+        <button type="submit" class="button button--link">Sign Up</button> </a>
+    </div>
   </div>
-  <div class=" button-wrapper">
-    <a routerLink="/login" class="">
-      <button type="submit" class="button button--link">Log In</button> </a>
-    <a routerLink="/signup">
-      <button type="submit" class="button button--link">Sign Up</button> </a>
-  </div>
-
 </div>
