--- a/src/styles/scss/_index.scss
+++ b/src/styles/scss/_index.scss
@@ -1,4 +1,6 @@
-@import './abstract' ;
-@import './base-component';
+@import './abstract';
+@import './base';
+
+@import './pages';
 @import './components';
 @import './layout';
