--- a/src/app/components/admin/edit-user/edit-user.component.html
+++ b/src/app/components/admin/edit-user/edit-user.component.html
@@ -1,27 +1,29 @@
-<section class="main-content  form-popup add-item-popup">
+<app-nav></app-nav>
+<section class="form-popup">
   <div class="add-items form-container">
-      <form class="form"   [formGroup] = "editUserForm" (ngSubmit)="onSubmit()">
-          <h1 class="form__title">Edit User</h1>
-          <div class="input">
-              <input class="input__field name add-name-js" type="text" placeholder="Enter user name" formControlName="name" >
-              <span *ngIf='!name.valid && name.touched' class="error">
-                <span *ngIf="name.hasError('required')">Name cannot be empty</span>
-                <span *ngIf="name.hasError('minlength')"> Name must be atleast 5 characters.</span>
-              </span>
-          </div>
-          <div class="input">
-              <input class="input__field email add-email-js" type="text" placeholder="Enter user email" formControlName="email">
-              <span *ngIf='!email.valid && email.touched' class="error">
-                <span *ngIf="email.hasError('required')">Email cannot be empty</span>
-                <span *ngIf="email.hasError('email')"> Pleaser enter a valid Email.</span>
-              </span>
-          </div>
+    <form class="form" [formGroup]="editUserForm" (ngSubmit)="onSubmit()">
+      <h1 class="form__title">Edit User</h1>
+      <div class="input">
+        <input class="input__field name add-name-js" type="text" placeholder="Enter user name" formControlName="name">
+        <span *ngIf='!name.valid && name.touched' class="error">
+          <span *ngIf="name.hasError('required')">Name cannot be empty</span>
+          <span *ngIf="name.hasError('minlength')"> Name must be atleast 5 characters.</span>
+        </span>
+      </div>
+      <div class="input">
+        <input class="input__field email add-email-js" type="text" placeholder="Enter user email"
+          formControlName="email">
+        <span *ngIf='!email.valid && email.touched' class="error">
+          <span *ngIf="email.hasError('required')">Email cannot be empty</span>
+          <span *ngIf="email.hasError('email')"> Pleaser enter a valid Email.</span>
+        </span>
+      </div>
 
-          <div class="input button-wrapper">
-              <button [disabled]="!editUserForm.valid" class="button button--warning" id="add-user-btn" type="submit">Edit
-                  User</button>
-              <button class="button button--danger" value="cancel" type ='reset' (click)="goToAdmin()">Cancel</button>
-          </div>
-      </form>
+      <div class="input button-wrapper">
+        <button [disabled]="!editUserForm.valid" class="button button--warning" id="add-user-btn" type="submit">Edit
+          User</button>
+        <button class="button button--danger" value="cancel" type='reset' (click)="goToAdmin()">Cancel</button>
+      </div>
+    </form>
   </div>
 </section>
