--- a/src/app/components/forms/sign-up/sign-up.component.html
+++ b/src/app/components/forms/sign-up/sign-up.component.html
@@ -1,44 +1,47 @@
-<div class="form-container">
-  <div class="form login">
-    <h1 class="form__title">Sign Up</h1>
+<div class="form-wrapper">
+  <div class="form-container">
+    <div class="form login">
+      <h1 class="form__title">Sign Up</h1>
 
-    <form id="signup-form" [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
-      <div class="input">
-        <input class="input__field  " type="Name" placeholder="Enter your Name" formControlName="name">
-        <span *ngIf='!name.valid && name.touched' class="error">
-          <span *ngIf="name.hasError('required')">Name cannot be empty</span>
-          <span *ngIf="name.hasError('minlength')"> Name must be atleast 5 characters.</span>
-        </span>
-      </div>
-      <div class="input">
-        <input class="input__field  " type="email" placeholder="Enter your email" formControlName="email">
-        <span *ngIf='!email.valid && email.touched' class="error">
-          <span *ngIf="email.hasError('required')">Email cannot be empty</span>
-          <span *ngIf="email.hasError('email')"> Pleaser enter a valid Email.</span>
-        </span>
-      </div>
-      <div class="input">
-        <input class="input__field password  password-text" type="password" placeholder="Enter your password"
-          formControlName="password">
-        <span *ngIf='!password.valid && password.touched' class="error">
-          <span *ngIf="password.hasError('required')">Password cannot be empty</span>
-          <span *ngIf="password.hasError('minlength')"> Password must be atleast 5 characters.</span>
-        </span>
-      </div>
-      <div class="input">
-        <input class="input__field password  password-text" type="password" placeholder="Re-Enter your password"
-          formControlName="confirmPassword">
-        <span *ngIf='!confirmPassword.valid && confirmPassword.touched' class="error">
-          <span *ngIf="confirmPassword.hasError('required')">Password cannot be empty</span>
+      <form id="signup-form" [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
+        <div class="input">
+          <input class="input__field  " type="Name" placeholder="Enter your Name" formControlName="name">
+          <span *ngIf='!name.valid && name.touched' class="error">
+            <span *ngIf="name.hasError('required')">Name cannot be empty</span>
+            <span *ngIf="name.hasError('minlength')"> Name must be atleast 5 characters.</span>
+          </span>
+        </div>
+        <div class="input">
+          <input class="input__field  " type="email" placeholder="Enter your email" formControlName="email">
+          <span *ngIf='!email.valid && email.touched' class="error">
+            <span *ngIf="email.hasError('required')">Email cannot be empty</span>
+            <span *ngIf="email.hasError('email')"> Pleaser enter a valid Email.</span>
+          </span>
+        </div>
+        <div class="input">
+          <input class="input__field password  password-text" type="password" placeholder="Enter your password"
+            formControlName="password">
+          <span *ngIf='!password.valid && password.touched' class="error">
+            <span *ngIf="password.hasError('required')">Password cannot be empty</span>
+            <span *ngIf="password.hasError('minlength')"> Password must be atleast 5 characters.</span>
+          </span>
+        </div>
+        <div class="input">
+          <input class="input__field password  password-text" type="password" placeholder="Re-Enter your password"
+            formControlName="confirmPassword">
+          <span *ngIf='!confirmPassword.valid && confirmPassword.touched' class="error">
+            <span *ngIf="confirmPassword.hasError('required')">Password cannot be empty</span>
 
-        </span>
-        <span *ngIf="signUpForm.hasError('notMatched') && confirmPassword.valid " class="error">Password do not match</span>
-      </div>
+          </span>
+          <span *ngIf="signUpForm.hasError('notMatched') && confirmPassword.valid " class="error">Password do not
+            match</span>
+        </div>
 
 
-      <div class="input button-wrapper">
-        <button type="submit" class="button">Sign Up</button>
-        <button type="reset" class="button">Cancel</button>
-      </div>
-    </form>
+        <div class="input button-wrapper">
+          <button [disabled]="!signUpForm.valid" (click)="formSubmit()" type="submit" class="button">Sign Up</button>
+          <button backButton type="reset" class="button button--danger">Cancel</button>
+        </div>
+      </form>
+    </div>
   </div>
