--- a/src/styles/scss/abstract/_color.scss
+++ b/src/styles/scss/abstract/_color.scss
@@ -1,8 +1,7 @@
-$primary: #47B5FF;
-$primary-dark:#256D85;
-$primary-light:#DFF6FF;
-$secondary:#06283D;
-$primary: #0a2558;
+$primary: #3a86ff;
+$primary-light: #DFF6FF;
+$secondary: #06283D;
+$primary-bright: #47B5FF;
 $dark: #333;
 $light: #fff;
 $error: #e75858;
@@ -10,8 +9,13 @@ $errordark: #e02c2c;
 $sucess: #367e18;
 $sucess-light: #47ac1c;
 $grey: #f3f3f3;
-$primary-light: #C4DFAA;
 $primary-soft: #081d45;
-$primary-bright: #0c3b92;
+$secondary-bright: #0c3b92;
 $warining: #e7d210e7;
 $wariningbright: #ffe816;
+$background-1: #ffddd2;
+$background-2: #edf6f9;
+
+$background: #EFF3FD;
+$active: #00DEA3;
+$users-bg: #FFCC40;
