--- a/src/styles/scss/components/_buttons.scss
+++ b/src/styles/scss/components/_buttons.scss
@@ -1,50 +1,67 @@
 .button-wrapper {
-	margin-top: 35px;
-	color: $light;
-	display: flex;
-	justify-content: space-between;
+  margin-top: 35px;
+  color: $light;
+  display: flex;
+  justify-content: space-between;
+
+  &.button-wrapper-delete {
+    justify-content: space-around;
+  }
 }
 
 .button {
-	border: none;
-	font-size: 17px;
-	font-weight: 500;
-	letter-spacing: 1px;
-	border-radius: 6px;
-	padding: 0 35px;
-	background-color: $primary;
-	cursor: pointer;
-	transition: all 0.3s ease;
-	@include size(100%, 100%);
-	color: $light;
+  border: none;
+  font-size: 17px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  border-radius: 6px;
+  padding: 0 35px;
+  background-color: $primary-soft;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  @include size(100%, 100%);
+  color: $light;
+  margin: 0 7px;
 
-	&:hover {
-		background-color: $secondary;
-	}
-  &--link{
-    padding: 10px 20px;
+  &:hover {
+    background-color: $primary;
   }
-	&--success {
-		background: $sucess;
 
-		&:hover {
-			background-color: $sucess-light;
-		}
-	}
+  &--link {
+    background: $grey;
+    padding: 10px 20px;
+    color: $dark;
+    border: $grey 1px solid;
 
-	&--danger {
-		background: $error;
+    &:hover {
+      background-color: $secondary-bright;
+      color: $light;
+      border: $grey 1px solid;
+      overflow: hidden;
+    }
+  }
 
-		&:hover {
-			background-color: $errordark;
-		}
-	}
+  &--success {
+    background: $sucess;
 
-	&--warning {
-		background: $warining;
+    &:hover {
+      background-color: $sucess-light;
+    }
+  }
 
-		&:hover {
-			background-color: $wariningbright;
-		}
-	}
+  &--danger {
+    background: $errordark;
+
+    &:hover {
+      background-color: $error;
+    }
+  }
+
+  &--warning {
+    background: $warining;
+
+    &:hover {
+      background-color: $wariningbright;
+    }
+  }
 }
