--- a/src/styles/scss/components/_form.scss
+++ b/src/styles/scss/components/_form.scss
@@ -1,86 +1,73 @@
 .form-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    transition: height 0.2s ease;
-    flex-direction: column;
-
-    .form {
-        width: 410px;
-        padding: 10px 30px;
-        background-color: #fff;
-        transition: margin-left 0.18s ease;
-
-        &__title {
-            position: relative;
-            font-size: 25px;
-            font-weight: 600;
-
-            &::before {
-                content: "";
-                position: absolute;
-                left: 0;
-                bottom: 0;
-                @include size(30px, 3px);
-                background-color: $primary;
-                border-radius: 25px;
-            }
-        }
-
-        .input {
-            position: relative;
-            @include size(100%, 35px);
-            margin-top: 35px;
-
-            &__field {
-                @include size(100%, 100%);
-                padding: 0 35px;
-                border: none;
-                outline: none;
-                font-size: 16px;
-                border-bottom: 2px solid #ccc;
-                border-top: 2px solid transparent;
-                transition: all 0.2s ease;
-            }
-
-            .error {
-
-                    color: $error;
-                    font-size: 14px;
-
-                    &--success {
-                        border-bottom: $sucess;
-                    }
-
-                    &--error {
-                        border-bottom: $error;
-                    }
-            }
-        }
-
-        .text {
-            color: $dark;
-            font-size: 14px;
+  position: relative;
+  display: grid;
+  transition: height 0.2s ease;
+  place-items: center;
+  height: 100vh;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
 
 
-        }
-
-        .link-text {
-            color: $primary;
-            padding: 30px 0 0 0;
-            font-size: 16px;
-            text-decoration: none;
-
-            &:hover {
-                text-decoration: underline;
-            }
-        }
+  .form {
+    width: 410px;
+    padding: 10px 30px;
+    background-color: #fff;
+    transition: margin-left 0.18s ease;
+    border-radius: 5px;
 
 
-        .login-signup {
-            text-align: center;
-        }
+    &__title {
+      position: relative;
+      font-size: 25px;
+      font-weight: 600;
 
-
+      &::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        @include size(30px, 3px);
+        background-color: $secondary;
+        border-radius: 25px;
+      }
     }
+
+    .input {
+      position: relative;
+      @include size(100%, 35px);
+      margin-top: 35px;
+
+      &__field {
+        @include size(calc(100% - 70px), 100%);
+        padding: 0 35px;
+        border: none;
+        outline: none;
+        font-size: 16px;
+        border-bottom: 2px solid #ccc;
+        border-top: 2px solid transparent;
+        transition: all 0.2s ease;
+      }
+
+      .error {
+
+        color: $error;
+        font-size: 16px;
+
+
+        &--success {
+          border-bottom: $sucess;
+        }
+
+        &--error {
+          border-bottom: $error;
+        }
+      }
+    }
+
+  }
+}
+
+.form-popup {
+  width: calc(100% - 255px);
+  margin-left: 270px;
+
 }
