--- a/src/styles/scss/components/_index.scss
+++ b/src/styles/scss/components/_index.scss
@@ -1,1 +1,1 @@
-@import  './buttons', './form' ,'./table' ,'./page-header';
+@import './buttons', './form', './table', './page-header', './card', './chart';
