--- a/src/styles/scss/components/_table.scss
+++ b/src/styles/scss/components/_table.scss
@@ -1,78 +1,55 @@
 .table-container {
-  background: $light;
+
   height: 100vh;
-  margin-left: 200px;
+  margin-left: 270px;
 }
 
 .table {
+
   width: 100%;
   background: $light;
   margin-top: 0;
-  font-size: 20px;
+  font-size: 10px;
   border-spacing: 0px;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 7px;
+  box-shadow: rgba(75, 75, 199, 0.2) 0px 2px 5px 0px;
+  padding: 0 10px;
 
   &__body {
-      border-radius: 5px;
+    border-radius: 5px;
   }
 
   &__head {
-      font-weight: lighter;
-      padding: 7px;
-      margin: 0;
-      text-transform: capitalize;
-      background-color: $primary;
-      color: $light;
+    font-size: 17px;
+    border-top: 1px solid $light;
+    font-weight: lighter;
+    padding: 7px;
+    margin: 0;
+    text-transform: uppercase;
+    background-color: $primary-light;
+    color: $dark;
 
 
   }
 
-  &__row {
 
-
-      &:nth-child(odd) {
-          background-color: $light;
-          color: $dark;
-      }
-
-      &:nth-child(even) {
-          background-color: $grey;
-          color: $dark;
-      }
-
-      &:hover {
-          transform: scaleY(1.1);
-          background: $primary-soft;
-          color: $light;
-
-          .edit-icon {
-              color: $light;
-          }
-
-      }
-
-      &--noscale {
-          &:hover {
-              transform: none;
-          }
-      }
-  }
 
 
   &__data {
-      padding: 5px;
-      text-align: center;
-      border-bottom: 1px solid $primary-light;
-      text-transform: capitalize;
-      font-size: 18px;
+    padding: 5px;
+    text-align: center;
+    border-bottom: 1px solid $primary-light;
+    text-transform: capitalize;
+    font-size: 18px;
 
 
   }
-  .edit-icon{
+
+  .edit-icon {
     color: $primary;
     cursor: pointer;
   }
-  .trash-icon{
+
+  .trash-icon {
     color: $errordark;
     cursor: pointer;
   }
