--- a/src/styles/scss/layout/_nav.scss
+++ b/src/styles/scss/layout/_nav.scss
@@ -1,62 +1,132 @@
 .nav {
-    height: 100vh;
-    width: 200px;
-    background-color: $primary;
-    position: fixed;
+  height: 100vh;
+  width: 255px;
+  position: fixed;
+  background-color: $light;
+  margin: 0px 5px;
+  border-radius: 5px;
 
-    &__list {
-        background: $primary;
-        margin-top: 40px;
-        border-top: 1px solid $light;
-        padding: 0 10px;
-        list-style: none;
+  &__header {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+  }
 
-        &-items {
-            margin: 5px 0;
-            position: relative;
-            padding: 8px;
+  &__logo {
+    padding: 0 10px;
+  }
 
-            &:hover {
-                background: $light;
-                border-radius: 5px;
+  &__title {
+    padding: 0 10px;
+    font-size: 24px;
+  }
 
-                .nav__list-link {
-                    color: $primary;
+  &__list {
+    border-top: 1px solid $background;
+    padding: 20px;
+    list-style: none;
+    cursor: pointer;
+    justify-content: center;
+    margin-top: 20px;
+    font-size: 18px;
 
-                    .icon {
-                        color: $primary;
-                    }
-                }
-            }
+    &-items {
+      margin: 5px 0;
+      padding: 8px;
+
+      &:hover {
+        background: $light;
+        border-radius: 5px;
+
+        .nav__list-link {
+          color: $primary;
+
+          .icon {
+            color: $primary;
+          }
         }
+      }
 
-        &-link {
-            color: $light;
-            text-decoration: none;
-            font-size: 20px;
+      &-active {
+        border-radius: 5px;
+        color: $active;
 
-            .icon {
-                position: absolute;
-                left: 0;
-                top: 0;
-                transform: translateY(30%);
-                color: $light;
-            }
+        .nav__list-link {
+          display: flex;
+          align-items: center;
+          //for the dot required to be flex
+          color: $active;
 
-            &:hover {
-                background: $light;
-                border-radius: 5px;
-                color: $primary-soft;
+          .icon {
+            color: $active;
+          }
 
-                .icon {
-                    color: $primary-soft;
-                }
-
-            }
+          .dot-icon {
+            display: block;
+          }
         }
+      }
 
-        &-text {
-            padding-left: 20px;
-        }
+      .dot-icon {
+        padding-left: 20px;
+        font-size: 10px;
+        display: none;
+      }
     }
+
+    &-link {
+      text-decoration: none;
+      font-size: 20px;
+
+      &:hover {
+        background: $light;
+
+        .icon {
+          color: $primary-soft;
+        }
+      }
+    }
+
+    &-text {
+      padding-left: 20px;
+    }
+  }
+
+  &__bottom {
+    background: $active;
+    margin: 20px 10px;
+    border-radius: 10px;
+  }
+
+  .bottom {
+    display: grid;
+    position: absolute;
+    margin-bottom: 30px;
+    bottom: 0;
+    place-items: center;
+    padding: 20px;
+    width: calc(100% - 70px);
+
+    &__icon {
+      font-size: 40px;
+      padding: 20px;
+      background-color: $light ;
+      border-radius: 50%;
+      margin-bottom: 5px;
+    }
+
+    &__text {
+      margin-bottom: 16px;
+
+      &--large {
+        color: $light;
+        font-size: 20px;
+      }
+
+      &--samll {
+        font-size: 12px;
+        width: 100%;
+      }
+    }
+  }
 }
