margin issue fixed

--- a/src/styles/scss/pages/_index.scss
+++ b/src/styles/scss/pages/_index.scss
@@ -1,1 +1,6 @@
-@import './base-component', './delete_user_form', './form-wrapper', './dashboard-component';
+@import "./base-component", "./delete_user_form", "./form-wrapper", "./dashboard-component";
+
+html {
+    margin: 0;
+    padding: 0;
+}
