--- a/src/styles/scss/pages/_base-component.scss
+++ b/src/styles/scss/pages/_base-component.scss
@@ -1,4 +1,5 @@
 .base {
+  margin-top: -24px;
   &__container {
     height: 100vh;
     display: grid;
@@ -28,13 +29,11 @@
       height: 100%;
       border-radius: 5px;
       opacity: 0.7;
-
     }
   }
 
   .button-wrapper {
     margin: 0 auto;
-
   }
 
   &__buttons {
@@ -42,5 +41,4 @@
       margin: 0 15px;
     }
   }
-
 }
