--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -18,6 +18,11 @@
           <img src="../../../assets/images/dollar-Card.png" class="suscription-img" alt="" srcset="">
         </div>
       </div>
+
+
+    </div>
+    <div class="dashboard__table">
+      Top Users
     </div>
   </div>
 </div>
