--- a/src/styles/scss/pages/_dashboard-component.scss
+++ b/src/styles/scss/pages/_dashboard-component.scss
@@ -13,7 +13,8 @@
 .suscription {
   display: grid;
   margin-left: 50px;
-  padding: 10px 30px;
+
+  padding: 10px 80px;
   background-color: $light;
   border-radius: 10px;
 
@@ -21,6 +22,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 24px;
+    margin: 0 -50px;
   }
 
   &__icon {
@@ -33,6 +35,7 @@
 
   &__content {
     padding: 15px 0;
+    margin: 0 -50px;
   }
 
   &__currency {
