final push befor review

--- a/src/app/components/dashboard/card/card.component.html
+++ b/src/app/components/dashboard/card/card.component.html
@@ -50,7 +50,7 @@
           <i class="fa fa-solid fa-envelope card__icon "></i>
         </div>
         <div class="card__content-heading">
-          <p class="card__content-description"> Place Ads here </p>
+          <p class="card__content-description"> Place Ads </p>
         </div>
         <p class="card__content-text">
           New AD
