--- a/src/styles/scss/abstract/_color.scss
+++ b/src/styles/scss/abstract/_color.scss
@@ -13,9 +13,8 @@ $primary-soft: #081d45;
 $secondary-bright: #0c3b92;
 $warining: #e7d210e7;
 $wariningbright: #ffe816;
-$background-1: #ffddd2;
-$background-2: #edf6f9;
-
+$background-1: rgba(120, 62, 253, 0.2);
+$background-2: rgba(0, 222, 163, 0.4);
 $background: #EFF3FD;
 $active: #00DEA3;
 $users-bg: #FFCC40;
