--- a/src/styles/scss/components/_card.scss
+++ b/src/styles/scss/components/_card.scss
@@ -4,21 +4,23 @@
   justify-content: space-between;
   align-items: center;
   padding: 30px 0;
+
 }
 
 .card {
   display: flex;
   color: $dark;
   background: $light;
-  margin: 10px;
-  padding: 15px;
+  margin: 10px 10px 10px 0;
+  padding: 15px 6px;
   box-shadow: rgba(65, 61, 61, 0.3) 0px 1px 2px;
-  min-height: 135px;
   position: relative;
   border-radius: 15px;
   place-items: center;
   text-align: center;
   justify-content: space-between;
+  width: 22.5%;
+  min-height: 175px;
 
   &__icon {
     font-size: 20px;
@@ -39,8 +41,8 @@
   &__content {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 0 10px;
+    justify-content: space-around;
+    padding: 0 8px;
     font-size: 20px;
     color: $dark;
     text-transform: capitalize;
@@ -52,7 +54,7 @@
     }
 
     &-text {
-      font-size: 24px;
+      font-size: 22px;
       font-weight: 600;
     }
 
@@ -60,6 +62,6 @@
   }
 
   &__graph {
-    padding: 0 20px;
+    padding-left: 12px;
   }
 }
