--- a/src/styles/scss/layout/_nav.scss
+++ b/src/styles/scss/layout/_nav.scss
@@ -5,6 +5,14 @@
   background-color: $light;
   margin: 0px 5px;
   border-radius: 5px;
+  z-index: 1;
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: calc(100vh - 80px)
+  }
 
   &__header {
     display: flex;
@@ -23,7 +31,7 @@
 
   &__list {
     border-top: 1px solid $background;
-    padding: 20px;
+    padding: 10px 20px;
     list-style: none;
     cursor: pointer;
     justify-content: center;
@@ -94,29 +102,28 @@
 
   &__bottom {
     background: $active;
-    margin: 20px 10px;
+    margin: 10px;
+    margin-top: 85px;
     border-radius: 10px;
   }
 
   .bottom {
     display: grid;
-    position: absolute;
     margin-bottom: 30px;
-    bottom: 0;
     place-items: center;
-    padding: 20px;
+    padding: 15px 20px;
     width: calc(100% - 70px);
 
     &__icon {
       font-size: 40px;
-      padding: 20px;
+      padding: 18px;
       background-color: $light ;
       border-radius: 50%;
       margin-bottom: 5px;
     }
 
     &__text {
-      margin-bottom: 16px;
+      margin-bottom: 12px;
 
       &--large {
         color: $light;
