--- a/src/styles/scss/pages/_dashboard-component.scss
+++ b/src/styles/scss/pages/_dashboard-component.scss
@@ -5,24 +5,46 @@
 
 }
 
+.chart-wrapper {
+  width: 68%;
+}
+
+.dashboard {
+  &__suscription {
+    display: grid;
+    margin-left: 20px;
+    padding: 10px 20px;
+  }
+
+  &__table-heading {
+    font-size: 27px;
+    padding: 10px 30px;
+
+  }
+}
+
 .dashboard-chart-section {
   display: flex;
+  justify-content: space-between;
   margin: 30px 0;
+
 }
 
 .suscription {
-  display: grid;
-  margin-left: 50px;
 
-  padding: 10px 80px;
   background-color: $light;
   border-radius: 10px;
+  width: 25%;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+
 
   &__title {
     display: flex;
     justify-content: space-between;
-    font-size: 24px;
-    margin: 0 -50px;
+    font-size: 25px;
+
   }
 
   &__icon {
@@ -34,24 +56,126 @@
   }
 
   &__content {
-    padding: 15px 0;
-    margin: 0 -50px;
+    padding: 12px 0;
+
   }
 
   &__currency {
-    font-size: 24px;
+    font-size: 22px;
 
   }
 
   &__value {
-    font-size: 34px;
+    font-size: 30px;
     color: $primary;
   }
 
+  &__image {
+    width: 275px;
+    height: 200px;
+
+
+  }
 
   .suscription-img {
     width: 100%;
     height: 100%;
     opacity: 0.7;
+    display: grid;
+    place-items: center;
+
   }
+}
+
+.dashboard__table-section {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px 0;
+
+  &-card {
+
+    background-color: $light;
+    border-radius: 8px;
+
+    width: 25%;
+    margin-left: 20px;
+    padding: 30px 20px;
+
+
+    &-title {
+      font-size: 27px;
+      padding: 10px 0;
+    }
+
+    &-content {
+      padding: 16px;
+      border-radius: 8px;
+      margin: 5px 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      p {
+        padding: 0 20px;
+        font-size: 18px;
+      }
+
+      &-icon {
+        background: $primary-soft;
+        opacity: 0.8;
+        padding: 10px;
+        border-radius: 8px;
+        color: $light;
+        font-size: 24px;
+      }
+
+      &--primary {
+        background-color: $background-1;
+        opacity: 0.7;
+      }
+
+      &--secondary {
+        background-color: $background-2;
+        opacity: 0.8;
+      }
+    }
+  }
+}
+
+.topuser-table {
+  background-color: $light;
+  padding: 30px 20px;
+  border-radius: 8px;
+  width: 68%;
+
+
+  &__body {
+    width: 100%;
+
+    &:nth-child(odd) {
+      .user-type-table {
+        color: $secondary-bright;
+      }
+    }
+  }
+
+  &__data {
+    font-size: 18px;
+    padding: 10px 30px;
+
+
+
+
+    i {
+      color: $secondary-bright;
+      border: 1px solid $secondary-bright;
+      padding: 5px;
+      border-radius: 10px;
+      font-size: 24px;
+    }
+  }
+}
+
+.user-type-table {
+  color: $active;
 }
